--- a/nes_cmodel/nes_cmodel.vcxproj
+++ b/nes_cmodel/nes_cmodel.vcxproj
@@ -167,6 +167,7 @@ copy /Y "$(SolutionDir)nes_cmodel\nes_cmodel.h" "..\..\nes_fw\nes_fw"</Command>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="reg_r16.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
