--- a/nes_cmodel/nes_cmodel.vcxproj.filters
+++ b/nes_cmodel/nes_cmodel.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="pch.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="reg_r16.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
